Sun Jul 15 22:24:37 2007  pegacorn  <subscriber.jp AT gmail.com>

	* ext/dl/cfunc.c (rb_dlcfunc_call): adjust format.  [ruby-dev:31222]

	* ext/digest/digest.c (rb_digest_instance_update,
	  rb_digest_instance_finish, rb_digest_instance_reset,
	  rb_digest_instance_block_length): %s in rb_raise() expects char*.
	  [ruby-dev:31222]

	* ext/openssl/ossl.h: include ossl_pkcs5.h.  [ruby-dev:31231]

	* ext/openssl/ossl_pkcs5.h: new file for PKCS5.  [ruby-dev:31231]

	* ext/openssl/ossl_x509name.c (ossl_x509name_to_s): use ossl_raise()
	  instead of rb_raise().  [ruby-dev:31222]

	* ext/sdbm/_sdbm.c: DOSISH platforms need io.h.  [ruby-dev:31232]

	* ext/syck/syck.h: include stdlib.h for malloc() and free().
	  [ruby-dev:31232]

	* ext/syck/syck.h (syck_parser_set_input_type): prototype added.
	  [ruby-dev:31231]

	* win32/win32.c: include mbstring.h for _mbspbrk().  [ruby-dev:31232]

	* include/ruby/win32.h (rb_w32_getcwd): prototype added.
	  [ruby-dev:31232]

Sun Jul 15 21:07:43 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (bigtrunc): do not empty Bignum.  [ruby-dev:31229]

Sun Jul 15 19:05:28 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_cstr_to_inum): check leading non-digits.
	  [ruby-core:11691]

Sun Jul 15 04:42:20 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (get2comp): do nothing for empty Bignum.  [ruby-dev:31225]

Sat Jul 14 22:49:30 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (fix_pow): integer power calculation: 0**n => 0, 
	  1**n => 1, -1**n => 1 (n: even) / -1 (n: odd).

	* test/ruby/test_fixnum.rb (TestFixnum::test_pow): update test
	  suite.  pow(-3, 2^64) gives NaN when pow(3, 2^64) gives Inf.

Sat Jul 14 18:46:35 2007  Tanaka Akira  <akr@fsij.org>

	* configure.in: add --with-valgrind.

	* gc.h (SET_MACHINE_STACK_END): new macro to replace
	  rb_gc_set_stack_end.  it find out accurate stack boundary by
	  asm using gcc on x86.

	* thread.c (rb_gc_set_stack_end): don't define if asm-version